--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,26 +13,42 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
+      - name: Cache Terraform
+        uses: actions/cache@v4
+        with:
+          path: ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
+        
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.5.7
+        env:
+          TF_PLUGIN_CACHE_DIR: ~/.terraform.d/plugin-cache
           
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
           
       - name: Terraform Init
-        run: terraform init
+        run: |
+          echo "Starting Terraform init at $(date)"
+          terraform init
+          echo "Terraform init completed at $(date)"
         
       - name: Terraform Validate
         run: terraform validate
         
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: |
+          echo "Starting Terraform plan at $(date)"
+          terraform plan -out=tfplan
+          echo "Terraform plan completed at $(date)"
         
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
