--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    timeout-minutes: 15  # Prevent infinite hanging
     
     steps:
       - name: Checkout
@@ -38,7 +39,7 @@ jobs:
       - name: Terraform Init
         run: |
           echo "Starting Terraform init at $(date)"
-          terraform init
+          terraform init -upgrade=false
           echo "Terraform init completed at $(date)"
         
       - name: Terraform Validate
@@ -47,9 +48,13 @@ jobs:
       - name: Terraform Plan
         run: |
           echo "Starting Terraform plan at $(date)"
-          terraform plan -out=tfplan
+          # Use timeout and reduced parallelism to handle GitHub Actions network issues
+          timeout 300 terraform plan -out=tfplan -refresh=false -parallelism=2 -no-color
           echo "Terraform plan completed at $(date)"
         
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve tfplan
+        run: |
+          echo "Starting Terraform apply at $(date)"
+          terraform apply -auto-approve tfplan -parallelism=2 -no-color
+          echo "Terraform apply completed at $(date)"
